--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
         env:
-          CIBW_BUILD: "cp${{ matrix.python-version | replace('.', '') }}-*"
+          CIBW_BUILD: "cp${{ matrix.python-version }}-*"
           CIBW_ARCHS_WINDOWS: "AMD64"
           CIBW_SKIP: "*-win32"
           CIBW_TEST_COMMAND: >
