--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     
     steps:
       - uses: actions/checkout@v4
@@ -45,12 +45,7 @@ jobs:
             print(f'Found {len(devices)} devices')"
           CIBW_BUILD_VERBOSITY: 1
           CIBW_PRERELEASE_PYTHONS: true
-
-      - name: Verify wheel contents
-        run: |
-          python -m pip install wheelhouse/*.whl --force-reinstall
-          python -c "import duvc_ctl; print('Wheel verification successful')"
-
+          
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -92,7 +87,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     
     steps:
       - name: Set up Python ${{ matrix.python-version }}
