Add skip-existing to push even if it already exists
Due to dependency of build-and-publish.yml

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -146,6 +146,8 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           print-hash: true
+          skip-existing: true
+          verbose: true     
 
   create_release:
     name: Create GitHub Release
