--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
 
+[tool.setuptools]
+script-files = ["build_check.py"]
+
 [project]
 name = "duvc-ctl"
 version = "1.0.1"
