--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,12 @@
 requires = ["scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
 
+[tool.setuptools]
+script-files = ["build_check.py"]
+
 [project]
 name = "duvc-ctl"
-version = "1.0.1-rc2"
+version = "1.0.1-rc3"
 authors = [{ name = "allanhanan", email = "allan.hanan04@gmail.com" }]
 description = "DirectShow UVC Camera Control Library"
 readme = "PYPI_README.md"
