--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -90,8 +90,7 @@ skip = "pp*"  # Skip PyPy builds
 
 [tool.cibuildwheel.windows]
 before-build = "pip install cmake pybind11[global]"
-repair-wheel-command = "python repair_wheel.py {wheel} {dest_dir}"
-
+repair-wheel-command = "python bindings/python/repair_wheel.py {wheel} {dest_dir}"
 
 [tool.black]
 line-length = 88
