--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -54,9 +54,10 @@ jobs:
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
+        working-directory: ../
         with:
           name: wheels-py${{ matrix.python-version }}
-          path: bindings/python/wheelhouse/*.whl
+          path: wheelhouse/*.whl
           retention-days: 30
 
   build_sdist:
