--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -54,10 +54,9 @@ jobs:
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
-        working-directory: ../
         with:
           name: wheels-py${{ matrix.python-version }}
-          path: wheelhouse/*.whl
+          path: ../wheelhouse/*.whl
           retention-days: 30
 
   build_sdist:
