--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -36,7 +36,6 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
-        working-directory: bindings/python
         env:
           CIBW_BUILD: "${{ env.CIBW_PYTHON }}-win_amd64"
           CIBW_ARCHS_WINDOWS: "AMD64"
@@ -53,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-py${{ matrix.python-version }}
-          path: wheelhouse/*.whl
+          path: bindings/python/wheelhouse/*.whl
           retention-days: 30
 
   build_sdist:
