--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-py${{ matrix.python-version }}
-          path: bindings/python/wheelhouse/*.whl
+          path: path: wheelhouse/*.whl
           retention-days: 30
 
   build_sdist:
