--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
 requires = [
-    "scikit-build-core>=0.5.0",
-    "pybind11>=2.10.0",
+    "scikit-build-core>=0.6.0",
+    "pybind11[all]>=2.11.1",
 ]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "duvc-ctl"
-version = "2.0.0-rc4"
+version = "2.0.0-rc5"
 authors = [
     { name = "allanhanan", email = "allan.hanan04@gmail.com" }
 ]
@@ -55,7 +55,7 @@ Documentation = "https://github.com/allanhanan/duvc-ctl/blob/main/README.md"
 
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
-minimum-version = "0.5"
+minimum-version = "0.6"
 
 # Build directory
 build-dir = "build/{wheel_tag}"
@@ -66,6 +66,7 @@ cmake.source-dir = "../.."
 # CMake arguments
 cmake.args = [
     "-DDUVC_BUILD_PYTHON=ON",
+    "-DDUVC_USE_SYSTEM_PYBIND11=ON",
     "-DDUVC_BUILD_CLI=OFF", 
     "-DDUVC_BUILD_STATIC=ON",
     "-DDUVC_BUILD_C_API=OFF",
