Use relative paths in docs.yml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,15 @@ jobs:
       - name: Install Doxygen
         run: choco install doxygen.install graphviz -y
       
+      - name: Fix Doxyfile paths for CI
+        run: |
+          $doxyfile = "docs/doxygen/Doxyfile"
+          $content = Get-Content $doxyfile -Raw
+          $workspace = $env:GITHUB_WORKSPACE -replace '\\', '/'
+          $content = $content -replace 'C:/projets/duvc-ctl/duvc-ctl', $workspace
+          $content | Set-Content $doxyfile -NoNewline
+        shell: pwsh
+      
       - name: Build documentation
         run: |
           cd docs
