Add LICENSE.txt and update workflow to automatically generate VERIFICATION.txt

--- a/.github/workflows/publish-chocolatey.yml
+++ b/.github/workflows/publish-chocolatey.yml
@@ -168,6 +168,34 @@ jobs:
           Write-Host "   x64: $(Get-Item 'chocolatey\duvc-cli\tools\duvc-cli-x64.exe' | Select -ExpandProperty Length) bytes"
           Write-Host "   x86: $(Get-Item 'chocolatey\duvc-cli\tools\duvc-cli-x86.exe' | Select -ExpandProperty Length) bytes"
 
+      - name: Generate VERIFICATION.txt
+        shell: pwsh
+        run: |
+          Write-Host "Generating VERIFICATION.txt with SHA256 hashes..."
+
+          $hash64 = (Get-FileHash "chocolatey\duvc-cli\tools\duvc-cli-x64.exe" -Algorithm SHA256).Hash
+          $hash86 = (Get-FileHash "chocolatey\duvc-cli\tools\duvc-cli-x86.exe" -Algorithm SHA256).Hash
+
+          $verification = @"
+VERIFICATION
+Verification is intended to assist the Chocolatey moderators and community
+in verifying that this package's contents are trustworthy.
+
+1. Download source from https://github.com/allanhanan/duvc-ctl
+2. Build using instructions in README.
+3. Compare SHA256 checksums:
+
+   duvc-cli-x64.exe SHA256: $hash64
+   duvc-cli-x86.exe SHA256: $hash86
+
+If the checksums match, the binaries are verified.
+"@
+
+          $verification | Set-Content "chocolatey\duvc-cli\tools\VERIFICATION.txt" -Encoding UTF8
+
+          Write-Host "✓ VERIFICATION.txt created"
+          Get-Content "chocolatey\duvc-cli\tools\VERIFICATION.txt"
+
       - name: Pack Chocolatey package
         shell: pwsh
         run: |
